--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-html:5
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <script src="scripts/index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Cifra de César</title>
+</head>
+
+<body>
+    <header>
+        <h2>Cifra de César</h2>
+    </header>
+    <main>
+        <div class="introduction">
+            <p>
+                Em criptografia, a Cifra de César, também conhecida como cifra de troca, código de César ou troca de
+                César,
+                é uma das mais simples e conhecidas técnicas de criptografia. É um tipo de cifra de substituição na
+                qual
+                cada letra do texto é substituída por outra, que se apresenta no alfabeto abaixo dela um número fixo de
+                vezes. Por exemplo, com uma troca de três posições, A seria substituído por D, B se tornaria E, e assim
+                por
+                diante. O nome do método é em homenagem a Júlio César, que o usou para se comunicar com os seus
+                generais.
+            </p>
+            <p>
+                O processo de criptografia de uma cifra de César é frequentemente incorporado como parte de esquemas
+                mais
+                complexos, como a cifra de Vigenère, e continua tendo aplicações modernas, como no sistema ROT13. Como
+                todas as cifras de substituição monoalfabéticas, a cifra de César é facilmente decifrada e na prática
+                não
+                oferece essencialmente nenhuma segurança na comunicação.
+            </p>
+        </div>
+        <div class="encoder">
+            <input type="text">
+            <button onclick="criptografar()">Criptografar</button>
+            <button onclick="descriptografar()">Descriptografar</button>
+        </div>
+    </main>
+    <footer>
+        <h2>Resultado</h2>
+        <a id="retorno"></a>
+    </footer>
+</body>
+
+</html>
