Adição da opção de inserir a chave de criptografia, personalização da interface visual

--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
             </p>
         </div>
         <div class="encoder">
-            <input type="text">
+            <input type="text" placeholder="Sua Mensagem">
+            <input type="text" placeholder="Sua chave de criptografia">
             <button onclick="criptografar()">Criptografar</button>
             <button onclick="descriptografar()">Descriptografar</button>
+            <button onclick="limpar()">Limpar</button>
         </div>
     </main>
     <footer>
-        <h2>Resultado</h2>
-        <a id="retorno"></a>
+        <h2>Resultado: <a id="retorno">____________________</a></h2>
     </footer>
 </body>
 
